kubernetes_files/celery-validation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-validation-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: celery-validation
  template:
    metadata:
      labels:
        app.kubernetes.io/name: celery-validation
    spec:
      containers:
      - name: celery-validation
        # TODO: replace with your NEW backend image once built & pushed to the registry
        image: eu.gcr.io/prj-ext-prod-faang-gcp-dr/dcc-validate-metadata/faang-validator-api:latest
        imagePullPolicy: Always
        command: ["celery", "-A", "app.celery_app.celery_app", "worker", "--loglevel=info", "--concurrency=4"]
      imagePullSecrets:
      - name: regcred
