kubernetes_files/backend-validation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-validation-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend-validation
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend-validation
    spec:
      containers:
      - name: backend-validation
        image: europe-west2-docker.pkg.dev/prj-ext-prod-faang-gcp-dr/cloud-run-source-deploy/faang-validator-backend-service/faang-validator-backend-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: ar-validation-cred
---
apiVersion: v1
kind: Service
metadata:
  name: backend-validation-service
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: backend-validation
  ports:
  - port: 8000
    targetPort: 8000
