kubernetes_files/redis-validation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-validation-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-validation
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis-validation
    spec:
      containers:
      - name: redis
        image: redis:8.4.0
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-validation-service
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: redis-validation
  ports:
  - port: 6379
    targetPort: 6379
